--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,42 @@
 /* 
     General Styles
 */
+table {
+    width:60%;
+
+}
+
+h2 {
+    text-align:center;
+    color: #40519f;
+}
+
+
+table.center {
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+table tr:nth-child(even) {
+    background-color: #eee;
+}
+
+table tr:nth-child(odd) {
+    background-color: #fff;
+}
+
+table th {
+    background-color: #40519f;
+    color: white;
+}
+      
