--- a/src/styles/users.scss
+++ b/src/styles/users.scss
@@ -1,7 +1,9 @@
-button {
-    margin-right: 5px;
+thead, tr, th, td {
+  text-align: center;
+  width: 1%;
 }
 
 table {
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  border-collapse: collapse;
+  width: 80%;
 }
