--- a/src/styles/orders.scss
+++ b/src/styles/orders.scss
@@ -1,9 +1,5 @@
 thead, tr, th, td {
   text-align: center;
-  width: 1%;
+  //width: 1%;
 }
 
-table {
-  border-collapse: collapse;
-  width: 80%;
-}
