--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,11 +6,12 @@ table {
 
 }
 
-h2 {
-    text-align:center;
+h1, h2, h3 {
     color: #40519f;
 }
-
+h1 {
+    text-align: center;
+}
 
 table.center {
   margin-left:auto; 
